--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.35.0",
-    "@aptos-labs/wallet-adapter-react": "^4.1.0",
+    "@aptos-labs/wallet-adapter-react": "^4.0.0",
     "@chakra-ui/react": "^3.8.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-collapsible": "^1.1.3",
@@ -25,6 +25,7 @@
     "framer-motion-3d": "^11.0.3",
     "leva": "^0.9.35",
     "lucide-react": "^0.475.0",
+    "move-agent-kit": "^0.1.3",
     "playroomkit": "^0.0.61",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
