--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@react-three/drei": "9.75.0",
-    "@react-three/fiber": "8.2.2",
+    "@react-three/fiber": "^8.13.3",
     "@types/three": "0.152.1",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.0.3",
     "framer-motion-3d": "^11.0.3",
     "leva": "^0.9.35",
     "lucide-react": "^0.475.0",
-    "move-agent-kit": "^0.1.3",
     "playroomkit": "^0.0.61",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
