--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/react": "^1.1.22",
     "@aptos-labs/ts-sdk": "^1.35.0",
     "@aptos-labs/wallet-adapter-react": "^4.0.0",
     "@chakra-ui/react": "^3.8.1",
@@ -22,18 +23,22 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@react-three/drei": "9.75.0",
-    "@react-three/fiber": "^8.13.3",
+    "@react-three/fiber": "8.13.3",
     "@types/three": "0.152.1",
+    "ai": "^4.1.55",
     "class-variance-authority": "^0.7.1",
-    "framer-motion": "^11.0.3",
-    "framer-motion-3d": "^11.0.3",
+    "framer-motion": "11.0.3",
+    "framer-motion-3d": "11.0.3",
+    "isomorphic-dompurify": "^2.22.0",
     "leva": "^0.9.35",
     "lucide-react": "^0.475.0",
+    "marked": "^15.0.7",
     "playroomkit": "^0.0.61",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.2",
     "three": "0.153.0"
   },
