--- a/contract_gh_token/package.json
+++ b/contract_gh_token/package.json
@@ -10,6 +10,14 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "move:publish": "node ./scripts/move/publish"
+  },
+  "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.35.0"
+  },
+  "devDependencies": {
+    "dotenv": "16.3.1",
+    "tree-kill": "1.2.2"
   }
 }
